[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/EnergyBox/IndicatorArm.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/EnergyBox/EnergyScale.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/EnergyBox/GasIcon.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/EnergyBox/Knob.png" type="Texture" id=4]
[ext_resource path="res://Scripts/FuelGauge.gd" type="Script" id=5]

[node name="FuelGauge" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -26.0
margin_right = 26.0
margin_bottom = -2.0
script = ExtResource( 5 )

[node name="Wheel" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="Knob" type="Sprite" parent="."]
position = Vector2( 8, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IndicatorArm" type="Sprite" parent="."]
position = Vector2( 8, 16 )
rotation = 2.05949
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
offset = Vector2( 0.0141811, -5.00513 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 33.0
margin_bottom = 10.0
custom_constants/separation = 2

[node name="VBoxContainer" type="Control" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 20 )
size_flags_vertical = 6

[node name="CurrentEnergyLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = -1.0
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 0 )
custom_colors/font_color_shadow = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -0.5
margin_right = 8.0
margin_bottom = 0.5
rect_min_size = Vector2( 16, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer/VBoxContainer/ColorRect"]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 1 )
color = Color( 0.545098, 0.545098, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MaxEnergyLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -10.0
margin_right = 12.0
margin_bottom = 3.0
rect_min_size = Vector2( 24, 0 )
custom_colors/font_color_shadow = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GasIcon" type="TextureRect" parent="HBoxContainer"]
margin_left = 18.0
margin_top = 11.0
margin_right = 27.0
margin_bottom = 20.0
size_flags_vertical = 10
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
